# cw_django_dev

./: .codacy.yml  Readme.md  manage.py  pyproject.toml
.github/workflows/: ec2.yml
deploy/: Dockerfile  django-app.yaml  django-cron.yaml  ingress.yaml  pg-deployment.yaml  pg-storage.yaml  start
quizes/: production.py  settings.py  urls.py  wsgi.py
survey/: api.py  constants.py  models.py  urls.py  views.py
survey/management/commands/: create_dummy_data.py  update_daily_ranking.py
survey/migrations/: 0001_initial.py
survey/templates/survey/: question_list.html
tests/: conftest.py  factories.py  test_survey_views.py  test_update_daily_ranking.py
