[tool.poetry]
name = "cw-django-dev"
version = "0.1.0"
description = ""
authors = ["Alejandro Estela <alejandro@estela.pe>"]
readme = "README.md"
packages = [{include = "cw_django_dev"}]

[tool.poetry.dependencies]
python = "3.11.0"
asgiref = "3.4.1"
django = "3.2.5"
pytz = "2021.1"
sqlparse = "0.4.1"
django-ninja = "^1.0.1"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
ruff-lsp = "^0.0.45"
django-stubs = "^4.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
factory-boy = "^3.3.0"
pytest-django = "^4.7.0"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "quizes.settings"
django_find_project = true
django_debug_mode = "keep"
addopts = "--reuse-db -s --cov"
filterwarnings = [
    "ignore::DeprecationWarning:django", # too many warnings for django 3.2.5
    "ignore:::pydantic",
]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
omit = [
    '*/tests/*',
    '*/migrations/*',
    '*__init__.py*',
    '*wsgi.py*',
    '*admin.py*',
    '*create_dummy_data.py*',
]

[tool.coverage.report]
show_missing = true
sort = "cover"
